# airflow-2

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt
tests/dags/: test_dags_integrity.py
